2009-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Change source tree layout.

	* sl.mk,
	* tests.mk,
	* Makefile.am,
	* bootstrap,
	* configure.ac: Update accordingly.

	* bin/Makefile.am,
	* bin/cce.in,
	* bin/sag,
	* bin/scu,
	* bin/slc.in,
	* bin/slr.in,
	* bin/slt.in,
	* bin/spp,
	* bin/timeout.in: Rename to...

	* tools/bin/Makefile.am,
	* tools/bin/cce.in,
	* tools/bin/sag,
	* tools/bin/scu,
	* tools/bin/slc.in,
	* tools/bin/slr.in,
	* tools/bin/slt.in,
	* tools/bin/spp,
	* tools/bin/timeout.in: here.

	* demo/10threads.sl,
	* demo/Makefile.am,
	* demo/answer.sl,
	* demo/fibonacci.sl,
	* demo/helloworld.sl,
	* demo/roman.sl: Rename to...

	* programs/demo/10threads.sl,
	* programs/demo/Makefile.am,
	* programs/demo/answer.sl,
	* programs/demo/fibonacci.sl,
	* programs/demo/helloworld.sl,
	* programs/demo/roman.sl: here.
	
	* demo/blas-test-saxpy.sl,
	* demo/blas/caxpy.sl,
	* demo/blas/cdotc.sl,
	* demo/blas/cdotu.sl,
	* demo/blas/complex.slh,
	* demo/blas/daxpy.sl,
	* demo/blas/ddot.sl,
	* demo/blas/saxpy.sl,
	* demo/blas/sdot.sl,
	* demo/blas/templates/xaxpy.sl,
	* demo/blas/templates/xaxpyc.sl,
	* demo/blas/templates/xdot.sl,
	* demo/blas/templates/xdotc.sl,
	* demo/blas/zaxpy.sl,
	* demo/blas/zdotc.sl,
	* demo/blas/zdotu.sl,
	* demo/fft/Makefile.am,
	* demo/fft/README,
	* demo/fft/fft.slh,
	* demo/fft/fft_bench.sl,
	* demo/fft/fft_bench1.sl,
	* demo/fft/fft_bench2.sl,
	* demo/fft/fft_extra.sl,
	* demo/fft/fft_impl1.sl,
	* demo/fft/fft_impl2.sl,
	* demo/fft/fft_test.sl,
	* demo/fft/fft_test1.sl,
	* demo/fft/fft_test2.sl,
	* demo/fft/gen_table_1.c,
	* demo/fft/gen_table_2.sh,
	* demo/fft/testfft.sh: Rename to...

	* programs/benchmarks/blas/Makefile.am,
	* programs/benchmarks/blas/blas-test-saxpy.sl,
	* programs/benchmarks/blas/caxpy.sl,
	* programs/benchmarks/blas/cdotc.sl,
	* programs/benchmarks/blas/cdotu.sl,
	* programs/benchmarks/blas/complex.slh,
	* programs/benchmarks/blas/daxpy.sl,
	* programs/benchmarks/blas/ddot.sl,